-------------------------------------------------------------------------------
Changes in version 3.1.2

- Fixed the authenticated test when used with Courier IMAP.

- Tweaked relay-ctrl-allow to only try to save a handle to the current
  working directory if it's going to execute another command later.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 3.1.1

- Fixed the obvious bugs in relay-ctrl-udp (it didn't send an
  acknowledgement packet, among other things).

- Modified relay-ctrl-chdir to dup the opened directory file descriptor
  to the highest possible slot, to work around programs that close
  opened file descriptors (ie various Courier programs).

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 3.1

- relay-ctrl-allow now communicates the $USER and $DOMAIN variables to
  relay-ctrl-check.  relay-ctrl-send/relay-ctrl-udp don't handle this
  yet.

- Modified the function that creates IP files to first create a new
  temporary file and rename it to ensure the last-modified timestamp is
  updated.

- Added a relay-ctrl-chdir program, to open a directory so the
  relay-ctrl-* programs can inherit the opened FD to fchdir.  This
  allows all the programs to be executed non-setuid.

- Various portability bugs fixed in the libraries.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 3.0

- Removed all CDB management code in favour of doing the check in a new
  program, relay-ctrl-check, which is a front-end to qmail-smtpd.
